VerticalTab dialog and a11y Text Editor (draft.js) VerticalTab dialog to add contents. a11Editor an text editor that outputs sematic html. Refactor of ImageAccessibilityForm to functional component. Changes in CourseCreatorTool to call VerticalTab instead content form.

--- a/SELI-Platform/client/main.html
+++ b/SELI-Platform/client/main.html
@@ -1,10 +1,10 @@
 <head>
-  <title>SELI-Platform</title>
-  <link rel="icon" href="">
+	<meta charset="utf-8" />
+	<title>SELI-Platform</title>
+	<link rel="icon" href="">
 </head>
 
 <body onunload="">
-  <div id="render-target">
-    
-  </div>
+	<div id="render-target">
+	</div>
 </body>
