Platform Stable Favicon from Seli. Arrow buttons styling from hompage. Home button to presentation. Navigation bar restores from last changes.

--- a/SELI-Platform/client/main.html
+++ b/SELI-Platform/client/main.html
@@ -1,7 +1,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>SELI-Platform</title>
-	<link rel="icon" href="">
+	<link rel="icon" href="/favicon.ico?v=2">
 </head>
 
 <body onunload="">
