Video Curso sin plantilla

--- a/ManualSELI/crearCursoSinPlantilla.html
+++ b/ManualSELI/crearCursoSinPlantilla.html
@@ -90,8 +90,10 @@
      width="700"
      height="641"
      title="Figura . crearCursonoGuiado7"> </center>
-
-    </div> 
+<h3 id="welcome">Ayuda en Video</h3>
+    <p> Hemos creado un video tutorial para guiarlo paso a paso en el registro de cuenta como tutor. </p>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/FZFhjHbJjSw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </center></div> 
 </section>
 <footer>
   <div class="container">
