--- a/ManualSELI/crearCursoConPlantilla.html
+++ b/ManualSELI/crearCursoConPlantilla.html
@@ -144,8 +144,11 @@
      width="700"
      height="641"
      title="Figura . crearCursoGuiado8"> </center>
-
-   </div>  
+<h3 id="welcome">Ayuda en Video</h3>
+    <p> Hemos creado un video tutorial para guiarlo paso a paso en el registro de cuenta como tutor. </p>
+<center> <iframe width="700" height="394" src="https://www.youtube.com/embed/uZxZWlX1uvU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>  
+ </div>  
 </section>
 <footer>
   <div class="container">
