--- a/ManualSELI/crearCursoConPlantilla.html
+++ b/ManualSELI/crearCursoConPlantilla.html
@@ -49,7 +49,8 @@
       <li><a href="crearCursoConPlantilla.html#view_type" class=" ">Crear curso mediante plantilla</a></li>
       <li><a href="opcionesAccesibilidad.html#view_type" class=" ">Opciones de Accesibilidad</a></li>
       <li><a href="dominiosAprendizaje.html#view_type" class=" ">Dominios de aprendizaje</a></li>
-     
+           <li><a href="agregarContenido.html#view_type" class=" ">Agregar Contenidos</a></li>
+
     </ul>
     <div class="docs-content">
       <h2>SELI</h2>
