--- a/ManualSELI/accesoPlataforma.html
+++ b/ManualSELI/accesoPlataforma.html
@@ -60,7 +60,7 @@
       
       
       <p> Para poder acceder a la plataforma SELI (Smart Ecosystem Learning and Inclusion) se debe digitar en el navegador la siguiente dirección URL <a href="https://seli.uazuay.edu.ec">SELI</a> Una vez que se digite la dirección del sitio web se desplegará la interfaz de usuario que tendrá el siguiente aspecto: </p>
-	  <center><img src="img/acceso.png"
+	  <center><img src="img/acceso.PNG"
      alt="Acceso a la plataforma SELI"
      width="600"
      height="541"
