--- a/ManualSELI/agregarContenido.html
+++ b/ManualSELI/agregarContenido.html
@@ -70,7 +70,7 @@
      
        <p>Para construir contenido en un tema distinto, seleccione la opción "Organización" y el tema o unidad a construir</p>
 
-<center><img src="img/nuevas/organizacion.png"
+<center><img src="img/nuevas/organizacion.PNG"
      alt="Paleta de elementos, opción organizacion"
      width="400"
      height="341"
@@ -80,7 +80,7 @@
 <p>Puede arrastrar cualquier elemento de la paleta para construir el contenido de su tema o unidad.
 </p>
 
-<center><img src="img/nuevas/nuevoTopicoNG.png"
+<center><img src="img/nuevas/nuevoTopicoNG.PNG"
      alt="Crear curso no Guiado"
      width="700"
      height="641"
