--- a/ManualSELI/analiticas.html
+++ b/ManualSELI/analiticas.html
@@ -55,7 +55,7 @@
     <div class="docs-content">
       <h2>SELI</h2>
       <h3 id="welcome">Analíticas de Aprendizaje</h3>
-      <center><img src="img/al1.png"
+      <center><img src="img/al1.PNG"
      alt="analiticas"
      width="300"
      height="241"
@@ -70,7 +70,7 @@
 <li> Interactividad de los estudiantes en los cursos</li>
 </ul>
 </p>
-	<center><img src="img/al2.png"
+	<center><img src="img/al2.PNG"
      alt="analiticas"
      width="600"
      height="541"
