--- a/ManualSELI/crearCursoConPlantilla.html
+++ b/ManualSELI/crearCursoConPlantilla.html
@@ -84,7 +84,7 @@
      height="641"
      title="Figura . crearCursoGuiado5"> </center>
      
-       <p><b>Paso 6:</b>: llenar los datos solicitados tales como objetivos de aprendizaje, conocimientos preexistentes, contenido principal y evaluación, seleccionar los recursos que utilizará y completar la lista de tareas. </p>
+       <p><b>Paso 6:</b> llenar los datos solicitados tales como objetivos de aprendizaje, conocimientos preexistentes, contenido principal y evaluación, seleccionar los recursos que utilizará y completar la lista de tareas. </p>
 
 <center><img src="img/nuevas/p6G.png"
      alt="Crear curso guiado paso 6"
@@ -131,7 +131,7 @@
      title="Figura . listaCaja"> </center>
 
      <p><b>Paso 7:</b> Agregar contenido a los temas del curso.</b></p>
-      <p><b>Nota:</b> Encontrará una pequeña guia acerca de como agregar contenido en la <a href="agregarContenido.html#view_type" class=" ">siguiente sección</a> </p>
+      <p><b>Nota:</b> Encontrará una pequeña guía acerca de cómo agregar contenido en la <a href="agregarContenido.html#view_type" class=" ">siguiente sección</a> </p>
 
 <center><img src="img/nuevas/p7G.png"
      alt="Crear curso guiado paso 7"
