--- a/ManualSELI/crearCursoSinPlantilla.html
+++ b/ManualSELI/crearCursoSinPlantilla.html
@@ -77,7 +77,7 @@
      title="Figura . crearCursonoGuiado5"> </center>
      
        <p><b>Paso 6:</b> Agregar contenido a los temas del curso.</p>
-        <p><b>Nota:</b> Encontrará una pequeña guia acerca de como agregar contenido en la <a href="agregarContenido.html#view_type" class=" ">siguiente sección</a> </p>
+        <p><b>Nota:</b> Encontrará una pequeña guía acerca de cómo agregar contenido en la <a href="agregarContenido.html#view_type" class=" ">siguiente sección</a> </p>
 
 <center><img src="img/nuevas/p6NG.png"
      alt="Crear curso no guiado paso 6"
