--- a/ManualSELI/login.html
+++ b/ManualSELI/login.html
@@ -57,7 +57,7 @@
       <h3 id="welcome">Acceso a la plataforma</h3>
           
       <p> Una vez registrado los datos le llegara un mail de confirmación de cuenta. Ya se puede realizar el inicio de sesión con el usuario y clave registrados.</p>
-	  <center><img src="img/login.png"
+	  <center><img src="img/login.PNG"
      alt="Login"
      width="600"
      height="541"
