--- a/ManualSELI/menu.html
+++ b/ManualSELI/menu.html
@@ -56,19 +56,19 @@
       <h3 id="welcome">Menú</h3>
       
       
-      <p> Después del registro del usuario en la plataforma se activa el Menu de Opciones en la parte superior izquierda.</p>
-	  <center><img src="img/menu1.png"
+      <p> Después del registro del usuario en la plataforma se activa el menú de opciones en la parte superior izquierda.</p>
+	  <center><img src="img/menu1.PNG"
      alt="menú"
      width="600"
      height="541"
      title="Figura . menú"> </center>
-      <center><img src="img/menu2.png"
+      <center><img src="img/menu2.PNG"
      alt="menú"
      width="600"
      height="541"
      title="Figura . menú"> </center>
        <p>El menú principal se compone de las siguientes opciones:</p>
-       <center><img src="img/opcionesmenu.png"
+       <center><img src="img/opcionesmenu.PNG"
      alt="opciones menú"
      width="300"
      height="241"
