--- a/ManualSELI/misCursos.html
+++ b/ManualSELI/misCursos.html
@@ -57,8 +57,8 @@
       <h3 id="welcome">Mis Cursos</h3>
       
       
-      <p>Esta opción permite crear cursos, acceder a los cursos publicados, cursos guardados, cursos inscritos y acceder a los diferentes cursos publicados en la plataforma SELI..</p>
-	         <center><img src="img/miscursos.png"
+      <p>Esta opción permite crear cursos, acceder a los cursos publicados, cursos guardados, cursos inscritos y acceder a los diferentes cursos publicados en la plataforma SELI.</p>
+	         <center><img src="img/miscursos.PNG"
      alt="mis cursos"
      width="300"
      height="241"
