--- a/ManualSELI/regCuenta.html
+++ b/ManualSELI/regCuenta.html
@@ -58,7 +58,7 @@
       
       
       <p> Para ingresar a la plataforma SELI el usuario debe crear una cuenta con la opción Sign Up  ubicada en la parte superior derecha como se muestra en la Figura 1. Existen dos tipos de perfiles con los que el usuario se puede registrar como Estudiante o como Tutor.  </p>
-	  <center><img src="img/reg.png"
+	  <center><img src="img/reg.PNG"
      alt="Registro en la plataforma SELI"
      width="600"
      height="541"
