--- a/ManualSELI/registroDocente.html
+++ b/ManualSELI/registroDocente.html
@@ -58,7 +58,7 @@
       
       
       <p> Para crear una cuenta con perfil tutor debe hacer clic en el menú de <b>Registro de Tutor</b> Cuenta Tutor y llenar los datos solicitados como nombre, usuario, fotos, clave, confirmación de clave, email, web personal, teléfono, biografía y foto de perfil, y hacer clic en el botón  <b>Enviar Requerimiento.</b></p>
-	  <center><img src="img/tutoreg.png"
+	  <center><img src="img/tutoreg.PNG"
      alt="Registro de tutor"
      width="600"
      height="541"
