--- a/ManualSELI/registroEstudiante.html
+++ b/ManualSELI/registroEstudiante.html
@@ -58,7 +58,7 @@
       
       
       <p> Para crear una cuenta con perfil estudiante debe hacer clic en el menú de Registro de Estudiante <b>Cuenta Estudiante</b> y llenar los datos solicitados como nombre, usuario, clave y foto de perfil, presionar en el botón <b>Enviar Requerimiento.</b></p>
-	  <center><img src="img/studreg.png"
+	  <center><img src="img/studreg.PNG"
      alt="Registro de Estudiante"
      width="600"
      height="541"
