--- a/ManualSELI/soporte.html
+++ b/ManualSELI/soporte.html
@@ -55,7 +55,7 @@
     <div class="docs-content">
       <h2>SELI</h2>
       <h3 id="welcome">Soporte</h3>
-      <center><img src="img/soport.png"
+      <center><img src="img/soport.PNG"
      alt="Soporte"
      width="200"
      height="241"
@@ -63,7 +63,7 @@
       
       <p>A través de esta opción el usuario puede reportar los errores o novedades con respecto al manejo de la plataforma. </p>
 
-<center><img src="img/soporte.png"
+<center><img src="img/soporte.PNG"
      alt="Soporte"
      width="600"
      height="541"
