--- a/ManualSELI/accesoPlataforma.html
+++ b/ManualSELI/accesoPlataforma.html
@@ -59,7 +59,7 @@
       <h3 id="welcome"> Acceso a la plataforma </h3>
       
       
-      <p> Para poder acceder a la plataforma SELI (Smart Ecosystem Learning and Inclusion) se debe digitar en el navegador la siguiente dirección URL <a href="https://seli.uazuay.edu.ec">SELI</a> Una vez que se digite la dirección del sitio web se desplegará la interfaz de usuario que tendrá el siguiente aspecto: </p>
+      <p> Para poder acceder a la plataforma SELI (Smart Ecosystem Learning and Inclusion) se debe digitar en el navegador la siguiente dirección URL <a href="https://vm2161.kaj.pouta.csc.fi/">SELI</a> Una vez que se digite la dirección del sitio web se desplegará la interfaz de usuario que tendrá el siguiente aspecto: </p>
 	  <center><img src="img/acceso.PNG"
      alt="Acceso a la plataforma SELI"
      width="600"
