--- a/ManualSELI/crearCursoConPlantilla.html
+++ b/ManualSELI/crearCursoConPlantilla.html
@@ -94,17 +94,17 @@
 
     <p> Debe tener en cuenta que existen diferentes recursos, en el caso de seleccionar <b>juegos, presentaciones o textos complementarios</b>, la plataforma creara automáticamente listas para llenar los datos correspondientes a los mismos.</p>
 
-<center><img src="img/nuevas/recJuegos.png"
+<center><img src="img/nuevas/recJuegos.PNG"
      alt="Recurso juegos"
      width="700"
      height="641"
      title="Figura . recJuegos"> </center>
-     <center><img src="img/nuevas/recPres.png"
+     <center><img src="img/nuevas/recPres.PNG"
      alt="Recurso presentaciones"
      width="700"
      height="641"
      title="Figura . recPres"> </center>
-     <center><img src="img/nuevas/recLibro.png"
+     <center><img src="img/nuevas/recLibro.PNG"
      alt="Recurso libros"
      width="700"
      height="641"
