Cambios en Figuras

--- a/ManualSELI/accesoPlataforma.html
+++ b/ManualSELI/accesoPlataforma.html
@@ -64,13 +64,13 @@
      alt="Acceso a la plataforma SELI"
      width="600"
      height="541"
-     title="Figura 1. Pantalla Inicial Plataforma SELI"> </center>
-    <p>  En la parte superior derecha se encuentra el menú de opciones de Login, Registro, y Lenguaje como se indica en la Figura2. </p>
+     title="Figura 1. Pantalla Inicial Plataforma SELI"> <p> Figura 1. Pantalla Inicial Plataforma SELI </p></center>
+        <p>  En la parte superior derecha se encuentra el menú de opciones de Login, Registro, y Lenguaje como se indica en la Figura2. </p>
      <center><img src="img/fig2acceso.png"
      alt="Acceso a la plataforma SELI"
      width="300"
      height="241"
-     title="Figura 2. Menu de Opciones Registro Plataforma"> </center>
+     title="Figura 2. Menu de Opciones Registro Plataforma"> <p> Figura 2. Menu de Opciones Registro Plataforma </p> </center>
  </div>
 </section>
 <footer>
