--- a/ManualSELI/regCuenta.html
+++ b/ManualSELI/regCuenta.html
@@ -57,12 +57,12 @@
       <h3 id="welcome"> Registro de Cuentas </h3>
       
       
-      <p> Para ingresar a la plataforma SELI el usuario debe crear una cuenta con la opción Sign Up  ubicada en la parte superior derecha como se muestra en la Figura 1. Existen dos tipos de perfiles con los que el usuario se puede registrar como Estudiante o como Tutor.  </p>
+      <p> Para ingresar a la plataforma SELI el usuario debe crear una cuenta con la opción Sign Up  ubicada en la parte superior derecha como se muestra en la Figura 3. Existen dos tipos de perfiles con los que el usuario se puede registrar como Estudiante o como Tutor.  </p>
 	  <center><img src="img/reg.PNG"
      alt="Registro en la plataforma SELI"
      width="600"
      height="541"
-     title="Figura 3. Perfiles de Usuario"> </center>
+     title="Figura 3. Perfiles de Usuario"> <p> Figura 3. Perfiles de Usuario </p> </center>
      </center>
    </div>
 </section>
